find: bugs resolvidos no swagger e login
