# src/swagger/swagger.json
@@ -29,7 +29,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/Users"
+                "$ref": "#/components/schemas/Users"
               },
               "examples": {
                 "Users": {
@@ -55,7 +55,7 @@
               "application/json": {
                 "schemma": {
                   "type": "object",
-                  "$ref": "#/components/schema/Users"
+                  "$ref": "#/components/schemas/Users"
                 }
               }
             }
@@ -80,7 +80,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schema/Users"
+                    "$ref": "#/components/schemas/Users"
                   }
                 }
               }
@@ -99,7 +99,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/Users"
+                "$ref": "#/components/schemas/Users"
               },
               "examples": {
                 "User": {
@@ -137,7 +137,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/characters"
+                "$ref": "#/components/schemas/characters"
               },
               "examples": {
                 "Tweet": {
@@ -158,7 +158,7 @@
               "application/json": {
                 "schema": {
                   "type": "array",
-                  "$ref": "#/components/schema/characters"
+                  "$ref": "#/components/schemas/characters"
                 }
               }
             }
@@ -202,7 +202,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schema/characters"
+                    "$ref": "#/components/schemas/characters"
                   }
                 }
               }
@@ -242,7 +242,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schema/characters"
+                  "$ref": "#/components/schemas/characters"
                 }
               }
             }
@@ -278,7 +278,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schema/characters"
+                "$ref": "#/components/schemas/characters"
               },
               "examples": {
                 "Character": {
@@ -298,7 +298,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schema/characters"
+                  "$ref": "#/components/schemas/characters"
                 }
               }
             }
@@ -334,7 +334,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schema/characters"
+                  "$ref": "#/components/schemas/characters"
                 }
               }
             }
@@ -373,7 +373,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schema/characters"
+                  "$ref": "#/components/schemas/characters"
                 }
               }
             }
@@ -388,16 +388,8 @@
       }
     }
   },
-
   "components": {
-    "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
-    },
-    "schema": {
+    "schemas": {
       "Users": {
         "type": "object",
         "properties": {
@@ -419,16 +411,29 @@
         }
       },
       "characters": {
-        "user": {
-          "type": "string"
-        },
-        "nome": {
-          "type": "string"
-        },
-        "imageUrl": {
-          "type": "string"
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "imageUrl": {
+            "type": "string"
+          }
         }
       }
+    },
+    "securitySchemes": {
+      "token": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
     }
+  },
+  "security": {
+    "token": []
   }
 }
